finita pagina regole e glossario

--- a/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.html
+++ b/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.html
@@ -10,7 +10,7 @@
     <div class="container h-full flex justify-center">
       <div class="w-[85%]">
         <section class="flex lg:justify-start justify-center">
-          <div class="lg:w-[50%] w-full  p-2 mt-10">
+          <div class="lg:w-[50%] w-full p-2 mt-10">
             <ul class="w-full lg:h-16 h-10 flex flex-nowrap">
               <li
                 [ngClass]="{
@@ -261,41 +261,136 @@
                   Le sostituzioni non hanno limite quindi spesso c’è un gioco di
                   strategia nel quale si gestiscono i falli per ogni giocatore.
                 </p>
-                <p class="mb-4 text-base">
-                  Se non siete grandi appassionati di sport, ma volete vivere
-                  l'atmosfera unica delle partite negli Stati Uniti, l'NBA
-                  potrebbe essere la scelta migliore.
-                </p>
                 <ul>
-                  Esistono diversi tipi falli; I <span class="font-bold">FALLI TEMPORALI</span>:
+                  Esistono diversi tipi falli;
+                  <span class="font-bold">I FALLI TEMPORALI</span
+                  >:
                   <li>
-                    1. <span class="font-bold">Tiri liberi:</span> Si fanno
-                    quando il gioco è fermo, dopo un fallo, e valgono 1 punto.
-                    Il giocatore tira da una linea posta a 5,80 metri dal fondo.
+                    1.
+                    <span class="font-bold">Infrazione di falli:</span> quando
+                    viene superato il limite di 4 falli di squadra per periodo
+                    viene fermato il gioco, anche se la gravità del fallo non lo
+                    consentirebbe, per assegnare due tiri liberi. Questa
+                    situazione è definita bonus.
                   </li>
                   <li>
-                    2. <span class="font-bold">Canestro da 2 punti:</span> Si fa
-                    in situazioni di gioco normale, e conta ogni canestro fatto
-                    all'interno della linea dei 3 punti, che è a 7,24 metri di
-                    distanza (6,72 metri negli angoli). Sia una schiacciata che
-                    un tiro da 6 metri valgono 2 punti.
+                    2.
+                    <span class="font-bold"
+                      >Infrazione degli otto secondi:</span
+                    >
+                    dopo una rimessa da fondo campo si hanno a disposizione otto
+                    secondi per portare il pallone nella metà campo avversaria.
                   </li>
                   <li>
                     3.
-                    <span class="font-bold">Canestro da 3 punti:</span> Ogni
-                    tiro oltre la linea dei tre punti conta come un canestro da
-                    3 punti. Attenzione, se anche solo un centimetro della
-                    scarpa del tiratore tocca la linea, il canestro vale solo 2
-                    punti.
+                    <span class="font-bold">Infrazione dei tre secondi:</span>
+                    un giocatore non può restare con entrambi i piedi nell’area
+                    avversaria per più di tre secondi.
+                  </li>
+                  <li>
+                    4.
+                    <span class="font-bold"
+                      >Infrazione del tempo di gioco:</span
+                    >
+                    il possesso complessivo del pallone prima che lo stesso
+                    tocchi almeno il ferro avversario non può durare più di 24
+                    secondi.
+                  </li>
+                  <li>
+                    5.
+                    <span class="font-bold">Infrazione di rimessa:</span>
+                    per rimettere la palla in campo a seguito all’uscita del
+                    pallone si hanno a disposizione 5 secondi, superati
+                    quest’ultimi la palla passa a gli avversari e viene
+                    considerata persa.
                   </li>
                 </ul>
-                <p class="mt-4 text-base">
-                  Può capitare di segnare 4 punti? Sì, è possibile quando un
-                  giocatore fa una tripla e subisce un fallo. In questo caso,
-                  oltre ai 3 punti per il canestro, il giocatore ha la
-                  possibilità di fare un tiro supplementare dalla lunetta. Se lo
-                  fa, completa un gioco da 4 punti.
-                </p>
+                <ul class="mt-4">
+                  Esistono diversi tipi falli;
+                  <span class="font-bold">I FALLI DI GIOCO</span
+                  >:
+                  <li>
+                    1.
+                    <span class="font-bold">Infrazione di campo:</span>avviene
+                    quando la squadra che ha il possesso della palla, dopo aver
+                    superato la metà campo, torna in dietro nella propria zona
+                    di difesa anche solo fermandosi sulla linee che delimita la
+                    distinzione tra due aree di competenza.
+                  </li>
+                  <li>
+                    2.
+                    <span class="font-bold">Palla Fuori:</span>
+                    se il giocatore sta dribblando o ha il controllo del pallone
+                    e tocca con il piede le linee che delimitano il campo, la
+                    palla viene considerata fuori gioco. La squadra avversaria
+                    riprende con una rimessa.
+                  </li>
+                  <li>
+                    3.
+                    <span class="font-bold">Infrazione di passi:</span>
+                    senza palleggiare si possono compiere al massimo due passi.
+                    Al terzo scatta l’infrazione. Tranne per la regola del terzo
+                    tempo nel quale un giocatore può commettere irregolarità
+                    come partire da fermo senza palleggiare, oppure nel compiere
+                    diversi passi dopo aver smesso di farlo. Questo solo nel
+                    caso in cui un giocatore riceve il pallone mentre si sta
+                    muovendo o se fa due passi, alternando i piedi, prima di
+                    tirare o passare il pallone, senza commettere un’infrazione.
+                  </li>
+                  <li>
+                    4.
+                    <span class="font-bold"
+                      >Infrazione del tempo di gioco:</span
+                    >
+                    palleggio, mi fermo, blocco il pallone e poi riparto -
+                    questo non è consentito dal regolamento.
+                  </li>
+                  <li>
+                    5.
+                    <span class="font-bold">Infrazione di timeout:</span>
+                    chiamare un timeout quando la squadra non ha più residui
+                  </li>
+                  <li>
+                    6.
+                    <span class="font-bold">Rimanere appesi al canestro:</span>
+                    il giocatore non può appendersi al canestro, alla rete, ecc.
+                    per evitare infortuni
+                  </li>
+                  <li>
+                    7.
+                    <span class="font-bold"
+                      >Infrazione del box dell'allenatore:</span
+                    >
+                    l'allenatore deve rimanere all'interno delle marcature e non
+                    correre sul campo.
+                  </li>
+                  <li>
+                    8.
+                    <span class="font-bold">Infrazione dei 5 giocatori:</span>
+                    devi avere 5 giocatori se la palla è viva.
+                  </li>
+                  <li>
+                    9.
+                    <span class="font-bold">Infrazione di sfondamento:</span>
+                    questo avviene quando un giocatore attaccante sbatte contro
+                    un difensore che sta fermo nella sua posizione. Di solito,
+                    il difensore deve essere in una buona posizione e
+                    l'attaccante deve abbassarsi e colpire il difensore con la
+                    spalla.
+                  </li>
+                  <li>
+                    10.
+                    <span class="font-bold">Espulsione:</span>
+                    quando un giocatore commette 6 falli, non può più giocare
+                    nella partita. Tuttavia non è previsto un limite di
+                    sostituzioni, per questo c’è anche una componente strategica
+                    che prevede la gestione dei giocatori in campo. Viene
+                    espulso anche se commette un "Flagrant Foul" di tipo 2, che
+                    è un contatto inutile ed eccessivo, oppure due “Flagrant
+                    Foul” di tipo 1, che è un fall tecnico e che comprende anche
+                    i falli per motivi disciplinari o di comportamento.
+                  </li>
+                </ul>
               </div>
             </div>
             <div class="flex lg:justify-between flex-wrap">
