footer mobile e fine regole e glossario

--- a/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.html
+++ b/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.html
@@ -49,7 +49,7 @@
         </section>
         <section *ngIf="selectedRegole === true">
           <section>
-            <div class="w-full altezza flex justify-center mb-2 mt-12">
+            <div class="w-full lg:altezza flex justify-center mb-2 mt-12">
               <img
                 class="object-cover w-full rounded-[25px]"
                 src="https://www.outpump.com/wp-content/uploads/2020/01/outpump-sport-logo-basketball-nba.jpg"
@@ -502,8 +502,8 @@
               >
                 I Play Off
               </div>
-              <div class="flex flex-nowrap justify-between items-center">
-                <div class="p-6 w-[45%]">
+              <div class="flex lg:flex-nowrap flex-wrap justify-between items-center">
+                <div class="p-6 lg:w-[45%] w-full">
                   <p class="mb-4 text-base">
                     Le 8 squadre che si sfideranno per il titolo giocheranno nei
                     playoff, seguendo un tabellone tradizionale in cui la prima
@@ -515,7 +515,7 @@
                     squadra deve vincere 4 partite.
                   </p>
                 </div>
-                <div class="w-[50%]">
+                <div class="lg:w-[50%] w-full">
                   <img
                     class="object-cover w-full h-full rounded-xl"
                     src="https://i.eurosport.com/2021/05/15/3132859.jpg"
@@ -532,8 +532,8 @@
               >
                 Cosa Vincono i Compioni
               </div>
-              <div class="flex flex-row-reverse flex-nowrap items-center">
-                <div class="p-6 w-[50%] justify-start">
+              <div class="flex lg:flex-row-reverse lg:flex-nowrap flex-wrap items-center">
+                <div class="p-6 lg:w-[50%] w-full justify-start">
                   <p class="mb-4 text-base">
                     <span class="font-bold"
                       >Cosa vincono i campioni delle Finals?</span
@@ -579,9 +579,9 @@
                     difficile quantificare un valore preciso.
                   </p>
                 </div>
-                <div class="w-[50%]">
+                <div class="lg:w-[50%] w-full">
                   <figure>
-                    <figcaption class="font-bold text-2xl ml-2">
+                    <figcaption class="font-bold text-center text-2xl ml-2">
                       Anello dei Lakers 2020
                     </figcaption>
                     <img
