--- a/NBA/src/app/components/footer/footer.component.html
+++ b/NBA/src/app/components/footer/footer.component.html
@@ -1,23 +1,22 @@
 <div>
-    <div class="w-full bg-primary text-white altezza-footer flex flex-nowrap">
-        <div class="w-[25%] flex justify-center items-center">
-            <img [routerLink]="['/home']" class="object-fill h-[50%] w-auto" src="assets/logo-slam-stats.png" alt="logo" />
+    <div class="w-full bg-primary text-white md:altezza-footer h-auto md:flex flex flex-wrap md:flex-nowrap">
+        <div class="lg:w-[25%] w-full flex justify-center items-center">
+            <img [routerLink]="['/home']" class="object-fill lg:h-[50%] h-[70%] w-auto" src="assets/logo-slam-stats.png" alt="logo" />
         </div>
-        <div class="w-[75%] flex flex-nowrap items-center">
-            <div class="w-full flex">
-                <div class="w-1/4">
+        <div class="md:w-[75%] w-full md:flex md:flex-nowrap flex-wrap items-center">
+            <div class="md:w-full w-full flex">
+                <div class="md:w-1/4 w-1/3">
                     <h3 class="flex justify-center">PAGINE</h3>
                     <ul class="flex flex-col items-start h-full m-4">
                         <li [routerLink]="['/home']">HOME</li>
                         <li [routerLink]="['/classifica']">CLASSIFICA</li>
                         <li [routerLink]="['/calendario']">CALENDARIO</li>
                         <li [routerLink]="['/squadre']">SQUADRE</li>
-                        <li [routerLink]="['/']">GIOCATORI</li>
                         <li [routerLink]="['/storia&regole']">STORIA E REGOLE</li>
                         <li [routerLink]="['/blog']">BLOG</li>
                     </ul>
                 </div>
-                <div class="w-1/4">
+                <div class="md:w-1/4 w-1/3">
                     <h3 class="text-white flex justify-center">CONTATTI</h3>
                     <ul class="flex flex-col items-start h-full m-4">
                         <li [routerLink]="['/']">Maps</li>
@@ -26,16 +25,15 @@
                         <li [routerLink]="['/']">telefono</li>
                     </ul>
                 </div>
-                <div class="w-1/4">
+                <div class="md:w-1/4 w-1/3">
                     <h3 class="text-white flex justify-center">SOCIAL</h3>
                     <ul class="flex flex-col items-start h-full m-4">
                         <li [routerLink]="['/']">Instagram</li>
                         <li [routerLink]="['/']">Facebook</li>
-                        <li [routerLink]="['/']">Tik Tok</li>
                         <li [routerLink]="['/']">X</li>
                     </ul>
                 </div>
-                <div class="w-1/4 flex flex-col justify-center items-center pb-5 h-full">
+                <div class="hidden md:w-1/4 md:flex flex-col justify-center items-center pb-5 h-full">
                     <h3>CERCA</h3>
                     <input type="text" class="rounded-full mt-4 text-center text-black" placeholder="cerca">
                 </div>
