--- a/NBA/src/app/components/navbar/navbar.component.html
+++ b/NBA/src/app/components/navbar/navbar.component.html
@@ -27,7 +27,7 @@
     </div>
 </nav> -->
 
-main <nav class="h-16 z-50">
+<nav class="h-16 z-50">
     <div class="bg-secondary w-full flex flex-nowrap fixed top-0 h-16 z-50">
         <div class="lg:w-[10%] w-1/3 flex justify-center">
             <img routerLink="/home" class="object-contain h-[80%]" src="assets/logo-slam-stats.png" alt="">
