--- a/NBA/src/app/components/navbar/navbar.component.html
+++ b/NBA/src/app/components/navbar/navbar.component.html
@@ -52,7 +52,7 @@
     </div>
 
     <!-- Mobile Menu (Initially Hidden) -->
-    <ul class="md:hidden mobile-menu bg-secondary w-full h-screen text-white absolute top-[64px]" [class.hidden]="!isMobileMenuOpen">
+    <ul class="md:hidden mobile-menu bg-secondary w-full h-screen text-white absolute top-[64px] pl-2" [class.hidden]="!isMobileMenuOpen">
         <li routerLink="/home"><button>NBA</button></li>
         <li routerLink="/classifica"><button>CLASSIFICA</button></li>
         <li routerLink="/calendario"><button>CALENDARIO</button></li>
