--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -1,3 +1,66 @@
 <app-navbar></app-navbar>
-<p>squadra-detail-page works!</p>
+<section>
+    <div class="flex h-full justify-center">
+        <div class="container h-full flex flex-wrap justify-center">
+            <div class="lg:h-16 h-10 w-full flex justify-around mt-10">
+                <ul class="w-full lg:h-16 h-10 flex flex-nowrap justify-around items-center">
+                    <li class="w-1/3 h-full flex justify-center items-center rounded-2xl">
+                        <button class="w-full text-cente lg:text-3xl">SQUADRA</button>
+                    </li>
+
+                    <li class="w-1/3 h-full flex justify-center items-center rounded-2xl">
+                        <button class="w-full text-center lg:text-3xl">GLOSSARIO</button>
+                    </li>
+
+                    <li class="w-1/3 h-full flex justify-center items-center rounded-2xl">
+                        <button class="w-full text-center lg:text-3xl">GIOCATORI</button>
+                    </li>
+                </ul>
+            </div>
+            <div class="h-[50vh] w-[90%] bg-secondary flex flex-wrap my-10">
+                <div class="w-1/2 h-1/3 border-r-2 border-white flex justify-around flex-nowrap">
+                    <div class="w-1/4 h-full flex justify-center items-center">
+                        <div class="rounded-full bg-white w-24 h-24">
+                            <img src="../../../assets/logo-slam-stats.png" class="object-contain h-full" alt="">
+                        </div>
+                    </div>
+                    <div class="w-2/4 flex flex-wrap justify-center items-center">
+                        <p class="w-full h-1/2 text-white flex items-end text-3xl">NOME SQUADRA</p>
+                        <p class="w-full h-1/2 text-white text-2xl">N pos° East Conference</p>
+                    </div>
+                </div>
+                <div class="w-1/2 h-1/3 border-l-2 border-white text-white flex justify-center items-center">
+                    <ul class="px-8">
+                        <li class="w-full"><p class="text-xl"><b class="text-2xl">Campo</b><span>:</span> TD Garden</p></li>
+                        <li class="w-full"><p class="text-xl"><b class="text-2xl">Località</b><span>:</span>
+                            Boston, Massachusetts, Stati Uniti,
+                                New Egland, Stati Uniti
+                        </p></li>
+                    </ul>
+                </div>
+                <div class="w-full h-2/3 border-t-4 border-white">
+
+                </div>
+            </div>
+            <div class="h-[50vh] w-[90%] bg-secondary flex flex-wrap my-10">
+                <div class="w-full h-1/3 border-r-2 border-white flex items-center">
+                    <div class="w-1/2 flex flex-nowrap">
+                        <div class="w-1/4 h-full flex justify-center items-center">
+                            <div class="rounded-full bg-white w-24 h-24">
+                                <img src="../../../assets/logo-slam-stats.png" class="object-contain h-full" alt="">
+                            </div>
+                        </div>
+                        <div class="w-2/4 flex flex-wrap justify-center items-center">
+                            <p class="w-full h-1/2 text-white flex items-end text-3xl">NOME SQUADRA</p>
+                            <p class="w-full h-1/2 text-white text-2xl">N pos° East Conference</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-full h-2/3 border-t-4 border-white">
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <app-footer></app-footer>
