--- a/NBA/src/app/views/squadre-page/squadre-page.component.html
+++ b/NBA/src/app/views/squadre-page/squadre-page.component.html
@@ -25,13 +25,13 @@
                             </div>
                             <div class="flex justify-center">
                                 <ul class="w-[90%] flex-col">
-                                    <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.SoutHeast">
+                                    <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.SoutHeast" [routerLink]="'/squadraDetail'">
                                         <div class="w-1/3 flex justify-center">
-                                            <img class="object-contain h-full" src={{team.logo}} alt="" />
+                                            <img class="object-contain h-full hover:cursor-pointer" src={{team.logo}} alt="" />
                                         </div>
                                         <div class="w-2/3 pl-4">
-                                            <p class="w-full">{{team.teamName}}</p>
-                                            <p class="w-full">❤</p>
+                                            <p class="w-auto hover:cursor-pointer">{{team.teamName}}</p>
+                                            <p class="w-[10%] hover:cursor-pointer">❤</p>
                                         </div>
                                     </li>
                                 </ul>
@@ -45,13 +45,13 @@
                             </div>
                             <div class="flex justify-center">
                                 <ul class="w-[90%] flex-col">
-                                    <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.Atlantic">
+                                    <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.Atlantic" [routerLink]="'/squadraDetail'">
                                         <div class="w-1/3 flex justify-center">
-                                            <img class="object-contain h-full" src={{team.logo}} alt="" />
+                                            <img class="object-contain h-full hover:cursor-pointer" src={{team.logo}} alt="" />
                                         </div>
                                         <div class="w-2/3 pl-4">
-                                            <p class="w-full">{{team.teamName}}</p>
-                                            <p class="w-full">❤</p>
+                                            <p class="w-auto hover:cursor-pointer">{{team.teamName}}</p>
+                                            <p class="w-[10%] hover:cursor-pointer">❤</p>
                                         </div>
                                     </li>
                                 </ul>
