--- a/NBA/src/app/views/home-page/home-page.component.html
+++ b/NBA/src/app/views/home-page/home-page.component.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="w-full h-6 bg-secondary"></div>
                 <app-classifica [isParziale]="true" class="lg:w-[85%] w-full mt-10">
-
+                    
                 </app-classifica>
                 <div class="w-full h-auto mt-10 flex justify-center items-center">
                     <button class="rounded-full bg-secondary lg:px-8 px-5 py-2 text-white font-bold text-sm lg:text-xl hover:underline" [routerLink]="['/classifica']">
@@ -52,9 +52,31 @@
             <button class="lg:w-[40%] w-[80%] rounded-full lg:h-[70px] h-[50px] z-0 relative bottom-6 bg-secondary lg:px-8 px-5 pt-6 text-white font-bold text-sm lg:text-xl hover:underline" [routerLink]="['/']">
                 SCOPRI IL NOSTRO PODCACAST
             </button>
-        </div> 
+        </div>
     </div>
 </section>
+
+<section class="">
+    <div class="flex justify-center">
+        <div class="container flex justify-center">
+            <div class="lg:w-[90%] w-full  flex flex-wrap justify-center">
+                <div class="w-full h-20 bg-primary flex justify-center items-center">
+                    <h2 class=" text-white text-4xl font-bold">
+                        ULTIME NOTIZIE
+                    </h2>
+                </div>
+                <div class="w-full h-6 bg-secondary"></div>
+                <div class="mt-10 flex flex-wrap justify-between">
+                    <app-articolo [extended]="true"></app-articolo>
+                    <app-articolo [extended]="false"></app-articolo>
+                    <app-articolo [extended]="false"></app-articolo>
+                    <app-articolo [extended]="false"></app-articolo>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <footer class="mt-20">
     <app-footer></app-footer>
 </footer>
