--- a/NBA/src/app/views/home-page/home-page.component.html
+++ b/NBA/src/app/views/home-page/home-page.component.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="w-full h-6 bg-secondary"></div>
                 <app-classifica [isParziale]="true" class="lg:w-[85%] w-full mt-10">
-                    
+
                 </app-classifica>
                 <div class="w-full h-auto mt-10 flex justify-center items-center">
                     <button class="rounded-full bg-secondary lg:px-8 px-5 py-2 text-white font-bold text-sm lg:text-xl hover:underline" [routerLink]="['/classifica']">
@@ -66,7 +66,7 @@
                     </h2>
                 </div>
                 <div class="w-full h-6 bg-secondary"></div>
-                <div class="mt-10 flex flex-wrap justify-between">
+                <div class="mt-10 flex flex-wrap justify-center lg:justify-between">
                     <app-articolo [extended]="true"></app-articolo>
                     <app-articolo [extended]="false"></app-articolo>
                     <app-articolo [extended]="false"></app-articolo>
