--- a/NBA/src/app/views/squadre-page/squadre-page.component.html
+++ b/NBA/src/app/views/squadre-page/squadre-page.component.html
@@ -10,22 +10,22 @@
     </div>
     <div class="flex h-full justify-center">
         <div class="container h-full flex flex-wrap justify-center">
-            <div class="w-[75%] h-full flex flex-wrap justify-center my-12">
+            <div class="lg:w-[75%] w-full h-full flex flex-wrap justify-center lg:my-12 ">
                 <div class="w-full flex justify-end pb-2">
                     <button>preferiti</button>
                 </div>
-                <div class="w-full flex justify-center items-center bg-primary h-12">
+                <div class="hidden w-full lg:flex justify-center items-center bg-primary h-12">
                     <h2 class="font-bold text-2xl text-white pl-4">EASTERN CONFERENCE</h2>
                 </div>
-                <div class="w-full flex justify-between mt-8 h-full">
-                    <div class="w-1/3 flex flex-wrap justify-start">
-                        <div class="w-[80%]">
+                <div class="w-full flex flex-wrap lg:flex-nowrap lg:justify-between mt-8 h-full">
+                    <div class="lg:w-1/3 w-full flex flex-wrap justify-center lg:justify-start">
+                        <div class="lg:w-[80%] w-full">
                             <div class="w-full flex justify-center items-center bg-primary font-bold text-1xl text-white h-12">
                                 <p>SOUTHEAST</p>
                             </div>
                             <div class="flex justify-center">
                                 <ul class="w-[90%] flex-col">
-                                    <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.SoutHeast" [routerLink]="'/squadraDetail'">
+                                    <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.SoutHeast" [routerLink]="['/squadraDetail', team.id]">
                                         <div class="w-1/3 flex justify-center">
                                             <img class="object-contain h-full hover:cursor-pointer" src={{team.logo}} alt="" />
                                         </div>
@@ -38,14 +38,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="w-1/3 flex flex-wrap justify-center">
-                        <div class="w-[80%]">
+                    <div class="lg:w-1/3 w-full flex flex-wrap justify-center lg:justify-center">
+                        <div class="lg:w-[80%] w-full">
                             <div class="w-full flex justify-center items-center bg-primary font-bold text-1xl text-white h-12">
                                 <p>ATLANTIC</p>
                             </div>
                             <div class="flex justify-center">
                                 <ul class="w-[90%] flex-col">
-                                    <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.Atlantic" [routerLink]="'/squadraDetail'">
+                                    <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.Atlantic" [routerLink]="['/squadraDetail', team.id]">
                                         <div class="w-1/3 flex justify-center">
                                             <img class="object-contain h-full hover:cursor-pointer" src={{team.logo}} alt="" />
                                         </div>
@@ -58,14 +58,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="w-1/3 flex flex-wrap justify-end">
-                        <div class="w-[80%]">
+                    <div class="lg:w-1/3 w-full flex flex-wrap justify-center lg:justify-end">
+                        <div class="lg:w-[80%] w-full">
                             <div class="w-full flex justify-center items-center bg-primary font-bold text-1xl text-white h-12">
                                 <p>CENTRAL</p>
                             </div>
                             <div class="flex justify-center">
                                 <ul class="w-[90%] flex-col">
-                                    <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.Central">
+                                    <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.Central" [routerLink]="['/squadraDetail', team.id]">
                                         <div class="w-1/3 flex justify-center">
                                             <img class="object-contain h-full" src={{team.logo}} alt="" />
                                         </div>
@@ -80,22 +80,22 @@
                     </div>
                 </div>
             </div>
-            <div class="w-[75%] h-full flex flex-wrap justify-center my-12">
+            <div class="lg:w-[75%] w-full h-full flex flex-wrap justify-center lg:my-12">
                 <div class="w-full flex justify-end pb-2">
                     <button>preferiti</button>
                 </div>
-                <div class="w-full flex justify-center items-center bg-primary h-12">
+                <div class="hidden lg:flex w-full justify-center items-center bg-primary h-12">
                     <h2 class="font-bold text-2xl text-white pl-4">WESTERN CONFERENCE</h2>
                 </div>
-                <div class="w-full flex justify-between mt-8 h-full">
-                    <div class="w-1/3 flex flex-wrap justify-start">
-                        <div class="w-[80%]">
+                <div class="w-full flex flex-wrap lg:flex-nowrap lg:justify-between mt-8 h-full">
+                    <div class="lg:w-1/3 w-full flex flex-wrap justify-center lg:justify-start">
+                        <div class="lg:w-[80%] w-full">
                             <div class="w-full flex justify-center items-center bg-primary font-bold text-1xl text-white h-12">
                                 <p>SOUTHWEST</p>
                             </div>
                             <div class="flex justify-center">
                                 <ul class="w-[90%] flex-col">
-                                    <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.SouthWest">
+                                    <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.SouthWest" [routerLink]="['/squadraDetail', team.id]">
                                         <div class="w-1/3 flex justify-center">
                                             <img class="object-contain h-full" src={{team.logo}} alt="" />
                                         </div>
@@ -108,14 +108,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="w-1/3 flex flex-wrap justify-center">
-                        <div class="w-[80%]">
+                    <div class="lg:w-1/3 w-full flex flex-wrap justify-center lg:justify-center">
+                        <div class="lg:w-[80%] w-full">
                             <div class="w-full flex justify-center items-center bg-primary font-bold text-1xl text-white h-12">
                                 <p>NORTHWEST</p>
                             </div>
                             <div class="flex justify-center">
                                 <ul class="w-[90%] flex-col">
-                                    <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.NorthWest">
+                                    <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.NorthWest" [routerLink]="['/squadraDetail', team.id]">
                                         <div class="w-1/3 flex justify-center">
                                             <img class="object-contain h-full" src={{team.logo}} alt="" />
                                         </div>
@@ -128,14 +128,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="w-1/3 flex flex-wrap justify-end">
-                        <div class="w-[80%]">
+                    <div class="lg:w-1/3 w-full flex flex-wrap justify-center lg:justify-end">
+                        <div class="lg:w-[80%] w-full">
                             <div class="w-full flex justify-center items-center bg-primary font-bold text-1xl text-white h-12">
                                 <p>PACIFIC</p>
                             </div>
                             <div class="flex justify-center">
                                 <ul class="w-[90%] flex-col">
-                                    <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.Pacific">
+                                    <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.Pacific" [routerLink]="['/squadraDetail', team.id]">
                                         <div class="w-1/3 flex justify-center">
                                             <img class="object-contain h-full" src={{team.logo}} alt="" />
                                         </div>
