--- a/NBA/src/app/views/home-page/home-page.component.html
+++ b/NBA/src/app/views/home-page/home-page.component.html
@@ -1,8 +1,8 @@
-<header class="h-screen w-full">
-    <img class="object-fill w-full h-screen mt-16" src="../../../assets/sfondo-home.png" alt="">
+<header class="md:h-screen h-[50vh] w-full">
+    <img class="md:object-fill object-cover md:w-full md:h-screen h-full md:pb-16 mt-16" src="../../../assets/prova imamgine piccola.jpg" alt="">
     <app-navbar></app-navbar>
 </header>
-<section class="mt-16">
+<section class="md:mt-16 mt-8">
     <div class="flex justify-center h-full">
         <div class="container flex justify-center h-full">
             <div class="lg:w-[90%] w-full h-full flex flex-wrap justify-center">
